# Smart-Home-Security-System

./: CMakeLists.txt  README.md  buzzer.c  buzzer.h  cgi.h  htmldata.c  led.c  led.h  light_sensor.c  light_sensor.h  main.c  pir_sensor.c  pir_sensor.h  servo.c  shared.c  shared.h  ssi.h  ultrasonic_sensor.c  ultrasonic_sensor.h
html_files/: index.shtml  irsensor.shtml  light.shtml  ultra.shtml
src/: CMakeLists.txt  buzzer.c  buzzer.h  ir_sensor.c  ir_sensor.h  led.c  led.h  main.c  servo.c  servo.h  ultrasonic_sensor.c  ultrasonic_sensor.h
